# 2022_Interactive_Media_Lab_Setup

./: .gitignore  readme.md
al_ext/assets3d/: CMakeLists.txt
al_ext/ogre3D/: CMakeLists.txt  al_Ogre3D.hpp  readme.md
al_ext/ogre3D/examples/: basic_use.cpp  instance_rendering.cpp
al_ext/ogre3D/src/: al_Ogre3D.cpp
al_ext/opencv/: CMakeLists.txt  al_OpenCV.hpp
al_ext/opencv/examples/: opencv.cpp
al_ext/opencv/src/: al_OpenCV.cpp
al_ext/openvr/: CMakeLists.txt
al_ext/openvr/examples/: openvr-app.cpp  openvr-pickables.cpp  openvr.cpp
al_ext/soundfile/src/: al_SoundfileBuffered.cpp
al_ext/spatialaudio/: readme.md
al_ext/statedistribution/: CMakeLists.txt  al_CuttleboneDomain.hpp  al_CuttleboneStateSimulationDomain.hpp
al_ext/statedistribution/cuttlebone/: CMakeLists.txt
al_ext/statedistribution/cuttlebone/Cuttlebone/: Broadcaster.hpp  Common.hpp  Cuttlebone.hpp  Log.hpp  Packet.hpp  Receiver.hpp  Selector.hpp
al_ext/statedistribution/cuttlebone/deprecated/: laptop_test.cpp  sphere_test.cpp
al_ext/statedistribution/cuttlebone/scratch/: interruption.cpp  recvmsg.cpp  sendto.cpp
al_ext/statedistribution/cuttlebone/scratch/osc/: caster.cpp  catcher.cpp
al_ext/statedistribution/cuttlebone/source/linux/: FileWatcherLinux.cpp
al_ext/statedistribution/cuttlebone/source/windows/: FileWatcherWindows.cpp  TimerWindows.cpp
al_ext/statedistribution/cuttlebone/test/: log.cpp  maker.cpp  maker_app.cpp  queue.cpp  receiver.cpp  taker.cpp  taker_app.cpp  time.cpp
al_ext/statedistribution/examples/: basic_use.cpp  distributed_mesh.cpp  distributed_mesh2.cpp
allolib/: CMakeLists.txt
tutorials/audiovisual/: 01_SineEnv_visual.cpp  02_OscEnv_visual.cpp  03_Vib_visual.cpp
tutorials/synthesis/: 01_SineEnv.cpp  01_SineEnv_Piano.cpp  02_OscEnv.cpp
tutorials/test/: 01_Box.cpp  01_Sphere.cpp  02_BoxWithDepth.cpp  02_PointCloud.cpp  03_OpenCV_with_Allolib.cpp  bg_sub.cpp  colorful_sphere.cpp  colorful_sphere.h  flags.cmake  rs-depth-filter.cpp  rs-dnn.cpp  rs-imshow.cpp  rs-rotate-pc.cpp  threshold_bg_sub.cpp  threshold_bg_sub.h
tutorials/test/include/: cv-helpers.hpp
tutorials/test/opencv/: bg_sub.cpp
tutorials/test/rs_opencv/: 03_OpenCV_With_Allolib.cpp  03_OpenCV_With_BG_Subtraction.cpp  03_OpenCV_With_BG_Subtraction_Color.cpp  03_OpenCV_With_BG_Subtraction_Depth.cpp  03_OpenCV_With_ColorFrame.cpp  03_OpenCV_with_Allolib.cpp  03_OpenCV_with_ColorFrame.cpp  CMakeLists.txt  cv-helpers.hpp  rs-depth-filter.cpp  rs-dnn.cpp  rs-imshow.cpp  rs-rotate-pc.cpp  run_oepncv.sh
tutorials/vectorField/: 02_texture.cpp
